--- a/src/views/landing.html
+++ b/src/views/landing.html
@@ -41,10 +41,13 @@
           Start your Peatio Cloud
         </h1>
         <p class="wow fadeInDown" data-wow-delay="0.2s" style="animation-delay: 0.2s; animation-name: none;">
-          Please submit your email to receive your Peatio.tech demo link.
+          Please submit your email to receive your peatio.tech demo link.
         </p>
         <div class="form wow fadeInDown" data-wow-delay="0.3s" style="animation-delay: 0.3s; animation-name: none;">
-          <Email></Email>
+          <form id="signup" class="formee clearfix" action="#" method="post" novalidate="novalidate">
+￼             <div style="float: left"><input name="email" id="email" type="text" style="display: block; width: 100%"></div>
+￼             <div style="float: left"><input class="right inputnew" type="submit" title="Send" value="Submit" style="display: block; width: 100%"></div>
+          </form>
           <div id="response"></div>
         </div>
       </div>
