--- a/src/views/partials/sections/features.html
+++ b/src/views/partials/sections/features.html
@@ -1,8 +1,8 @@
-<template>
+<div id="features" class="app-features text-center">
   <div class="container">
-    <h1 class="wow fadeInDown" data-wow-delay="0.1s" style="animation-delay: 0.1s; animation-name: none;">Peatio Features and Details</h1>
+    <h1>Peatio Features and Details</h1>
     <div class="col-md-4 features-left">
-      <div class="col-md-12 wow fadeInDown" data-wow-delay="0.2s" style="animation-delay: 0.2s; animation-name: none;">
+      <div class="col-md-12">
         <div class="icon">
           <i class="ion-xbox"></i>
         </div>
@@ -13,7 +13,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-12 wow fadeInDown" data-wow-delay="0.8s" style="animation-delay: 0.8s; animation-name: none;">
+      <div class="col-md-12">
         <div class="icon">
           <i class="ion-social-dropbox"></i>
         </div>
@@ -24,7 +24,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-12 wow fadeInDown" data-wow-delay="0.4s" style="animation-delay: 0.4s; animation-name: none;">
+      <div class="col-md-12">
         <div class="icon">
           <i class="ion-social-instagram-outline"></i>
         </div>
@@ -35,7 +35,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-12 wow fadeInDown" data-wow-delay="0.4s" style="animation-delay: 0.4s; animation-name: none;">
+      <div class="col-md-12">
         <div class="icon">
           <i class="ion-social-instagram-outline"></i>
         </div>
@@ -48,12 +48,12 @@
       </div>
     </div>
 
-    <div class="col-md-4 wow fadeInDown" data-wow-delay="0.5s" style="animation-delay: 0.5s; animation-name: none;">
-      <img class="img-responsive" src="../assets/img/iphone.png" alt="App">
+    <div class="col-md-4">
+      <img class="img-responsive" src="~@/assets/img/iphone.png" alt="App">
     </div>
 
     <div class="col-md-4 features-left">
-      <div class="col-md-12 wow fadeInDown" data-wow-delay="0.3s" style="animation-delay: 0.3s; animation-name: none;">
+      <div class="col-md-12">
         <div class="icon">
           <i class="ion-steam"></i>
         </div>
@@ -64,7 +64,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-12 wow fadeInDown" data-wow-delay="0.7s" style="animation-delay: 0.7s; animation-name: none;">
+      <div class="col-md-12">
         <div class="icon">
           <i class="ion-social-github"></i>
         </div>
@@ -75,7 +75,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-12 wow fadeInDown" data-wow-delay="0.8s" style="animation-delay: 0.8s; animation-name: none;">
+      <div class="col-md-12">
         <div class="icon">
           <i class="ion-social-dropbox"></i>
         </div>
@@ -86,7 +86,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-12 wow fadeInDown" data-wow-delay="0.6s" style="animation-delay: 0.6s; animation-name: none;">
+      <div class="col-md-12">
         <div class="icon">
           <i class="ion-social-html5-outline"></i>
         </div>
@@ -99,4 +99,4 @@
       </div>
     </div>
   </div>
-</template>
+</div>
