--- a/src/views/landing.html
+++ b/src/views/landing.html
@@ -1,20 +1,8 @@
 <div class="main software">
-  <div class="hero-section">
-    <Header></Header>
-  </div>
-
-  <!-- Client Section -->
-  <div class="client-section">
-    <Client></Client>
-  </div>
-
-  <div id="services" class="pitch text-center">
-    <Tech></Tech>
-  </div>
-
-  <div id="features" class="app-features text-center">
-    <Features></Features>
-  </div>
+  ${require("./partials/sections/hero.html")}
+  ${require("./partials/sections/carousel.html")}
+  ${require("./partials/sections/services.html")}
+  ${require("./partials/sections/features.html")}
 
   <div class="feature-sub">
     <div class="container">
@@ -27,30 +15,89 @@
     </div>
   </div>
 
-  <Platform></Platform>
-
   <div id="pricing" class="pricing-section text-center">
-    <Pricing></Pricing>
-  </div>
-
-  <!-- Subscribe Form -->
-  <div class="cta-sub no-color">
     <div class="container">
-      <div class="cta-inner">
-        <h1 class="wow fadeInDown" data-wow-delay="0s" style="animation-delay: 0s; animation-name: none;">
-          Start your Peatio Cloud
-        </h1>
-        <p class="wow fadeInDown" data-wow-delay="0.2s" style="animation-delay: 0.2s; animation-name: none;">
-          Please submit your email to receive your peatio.tech demo link.
-        </p>
-        <div class="form wow fadeInDown" data-wow-delay="0.3s" style="animation-delay: 0.3s; animation-name: none;">
-          <form id="signup" class="formee clearfix" action="#" method="post" novalidate="novalidate">
-￼             <div style="float: left"><input name="email" id="email" type="text" style="display: block; width: 100%"></div>
-￼             <div style="float: left"><input class="right inputnew" type="submit" title="Send" value="Submit" style="display: block; width: 100%"></div>
-          </form>
-          <div id="response"></div>
+      <div class="col-md-12 col-sm-12 nopadding">
+        <div class="pricing-intro">
+          <h1>Our Support Plans</h1>
+          <p>
+            Our plans includes dedicated Peatio installation and configuration for your needs<br class="hidden-xs">
+            Moreover they include continuous software maintenance, security upgrades, server monitoring and support.<br class="hidden-xs">
+            We also provide software development services for frontend and also new blockchain integration.
+          </p>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="table-left" >
+            <div class="icon">
+              <img src="~@/assets/img/cloud.png" alt="Icon">
+            </div>
+            <div class="pricing-details">
+              <h2>Peatio Cloud</h2>
+              <span>From €490 / Month</span>
+              <div class="pricing-list">
+                <ul>
+                  <li>&bull; Dedicated cluster</li>
+                  <li>&bull; Very fast provisioning</li>
+                  <li>&bull; Starting with 3 servers</li>
+                  <li>&bull; Front-End customization</li>
+                  <li>&bull; Choose popular currencies</li>
+                </ul>
+              </div>
+              <a class="btn btn-primary btn-action btn-fill page-scroll" href="#contact">Contact us</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="table-right table-center">
+            <div class="icon">
+              <img src="~@/assets/img/peatio_cloud.jpg" alt="Icon">
+            </div>
+            <div class="pricing-details">
+              <h2>Peatio on your Cloud</h2>
+              <span>From €1900 / year</span>
+              <div class="pricing-list">
+                <ul>
+                  <li>&bull; We deploy on AWS or GCP</li>
+                  <li>&bull; Configuration as Code</li>
+                  <li>&bull; Ability to define size</li>
+                  <li>&bull; Service integration</li>
+                  <li>&bull; Setting Access Control</li>
+                  <li>&bull; Manage your costs</li>
+                </ul>
+              </div>
+              <a class="btn btn-primary btn-action btn-fill page-scroll" href="#contact">Contact us</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="table-right">
+            <div class="icon">
+              <img src="~@/assets/img/development.svg" alt="Icon">
+            </div>
+            <div class="pricing-details">
+              <h2>Custom Development</h2>
+              <span>From €150 / day</span>
+              <div class="pricing-list">
+                <ul>
+                  <li>&bull; Dedicated professional</li>
+                  <li>&bull; Experienced in Peatio</li>
+                  <li>&bull; Adding new currencies</li>
+                  <li>&bull; Extending business rules</li>
+                  <li>&bull; Develop your blockchain</li>
+                </ul>
+              </div>
+              <a class="btn btn-primary btn-action btn-fill page-scroll" href="#contact">Contact us</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
+  ${require("./partials/sections/demo-request.html")}
+
+  ${require("./partials/footer.html")}
 </div>
