--- a/src/assets/css/scss/footer.scss
+++ b/src/assets/css/scss/footer.scss
@@ -24,7 +24,7 @@
   font-family: 'Josefin Sans';
   font-size: 21px;
   font-weight: 400;
-  color: #212f3e;
+  color: $primary-color;
   margin: 10px 0 10px 0;
 }
 
@@ -41,7 +41,7 @@
   font-family: 'Josefin Sans';
   font-size: 18px;
   font-weight: 400;
-  color: #212f3e;
+  color: $primary-color;
   text-decoration: none;
   display: inline-block;
 }
