--- a/src/views/landing.html
+++ b/src/views/landing.html
@@ -3,101 +3,9 @@
   ${require("./partials/sections/carousel.html")}
   ${require("./partials/sections/services.html")}
   ${require("./partials/sections/features.html")}
-
-  <div class="feature-sub">
-    <div class="container">
-      <div class="sub-inner">
-        <h1 class="wow fadeInDown" data-wow-delay="0.1s" style="animation-delay: 0.1s; animation-name: none;">
-          Peatio As a Service using bank grade security with AES256 encryption keys
-        </h1>
-        <a class="btn btn-primary btn-action wow fadeInDown page-scroll" data-wow-delay="0.2s" href="#pricing" style="animation-delay: 0.2s; animation-name: fadeInDown;">Support plans</a>
-      </div>
-    </div>
-  </div>
-
-  <div id="pricing" class="pricing-section text-center">
-    <div class="container">
-      <div class="col-md-12 col-sm-12 nopadding">
-        <div class="pricing-intro">
-          <h1>Our Support Plans</h1>
-          <p>
-            Our plans includes dedicated Peatio installation and configuration for your needs<br class="hidden-xs">
-            Moreover they include continuous software maintenance, security upgrades, server monitoring and support.<br class="hidden-xs">
-            We also provide software development services for frontend and also new blockchain integration.
-          </p>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="table-left" >
-            <div class="icon">
-              <img src="~@/assets/img/cloud.png" alt="Icon">
-            </div>
-            <div class="pricing-details">
-              <h2>Peatio Cloud</h2>
-              <span>From €490 / Month</span>
-              <div class="pricing-list">
-                <ul>
-                  <li>&bull; Dedicated cluster</li>
-                  <li>&bull; Very fast provisioning</li>
-                  <li>&bull; Starting with 3 servers</li>
-                  <li>&bull; Front-End customization</li>
-                  <li>&bull; Choose popular currencies</li>
-                </ul>
-              </div>
-              <a class="btn btn-primary btn-action btn-fill page-scroll" href="#contact">Contact us</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="table-right table-center">
-            <div class="icon">
-              <img src="~@/assets/img/peatio_cloud.jpg" alt="Icon">
-            </div>
-            <div class="pricing-details">
-              <h2>Peatio on your Cloud</h2>
-              <span>From €1900 / year</span>
-              <div class="pricing-list">
-                <ul>
-                  <li>&bull; We deploy on AWS or GCP</li>
-                  <li>&bull; Configuration as Code</li>
-                  <li>&bull; Ability to define size</li>
-                  <li>&bull; Service integration</li>
-                  <li>&bull; Setting Access Control</li>
-                  <li>&bull; Manage your costs</li>
-                </ul>
-              </div>
-              <a class="btn btn-primary btn-action btn-fill page-scroll" href="#contact">Contact us</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="table-right">
-            <div class="icon">
-              <img src="~@/assets/img/development.svg" alt="Icon">
-            </div>
-            <div class="pricing-details">
-              <h2>Custom Development</h2>
-              <span>From €150 / day</span>
-              <div class="pricing-list">
-                <ul>
-                  <li>&bull; Dedicated professional</li>
-                  <li>&bull; Experienced in Peatio</li>
-                  <li>&bull; Adding new currencies</li>
-                  <li>&bull; Extending business rules</li>
-                  <li>&bull; Develop your blockchain</li>
-                </ul>
-              </div>
-              <a class="btn btn-primary btn-action btn-fill page-scroll" href="#contact">Contact us</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  ${require("./partials/sections/feature-sub.html")}
+  ${require("./partials/sections/platform.html")}
+  ${require("./partials/sections/pricing.html")}
   ${require("./partials/sections/demo-request.html")}
-
   ${require("./partials/footer.html")}
 </div>
