--- a/src/views/partials/sections/hero.html
+++ b/src/views/partials/sections/hero.html
@@ -1,10 +1,24 @@
-<div class="hero-section">
-  <div class="container no-override">
-    <div id="main" class="col-md-12">
+<div class="hero-section" style="background-color: rgba(0, 0, 0, 0) !important; height: 100vh">
+  <div style="position: absolute; top: 0; left: 0; background-color: rgba(210, 210, 210, 0.7) !important; width: 100%; height: 100vh; z-index: 0"></div>
+  <div style="position: absolute; background-color: rgba(0, 0, 0, 0) !important; width: 98vw; height: 100vh; z-index: -1">
+    <vue-particles color="#9389f1"
+      :particleOpacity="0.7"
+      particlesNumber="50"
+      :particleSize="3"
+      linesColor="#938901"
+      :linesWidth="2"
+      :lineLinked="true"
+      :lineOpacity="0.7"
+      :linesDistance="250"
+      :moveSpeed="2"
+      :hoverEffect="true" hoverMode="grab"></vue-particles>
+  </div>
+  <div class="container no-override" style="background-color: rgba(0, 0, 0, 0) !important; z-index: 3; height: 100%; display: flex; justify-content: flex-start; flex-direction: column">
+    <div id="main" class="col-md-12" style="background-color: rgba(0, 0, 0, 0) !important">
       <img class="img-responsive" src="~@/assets/img/peatio.png" alt="Hero Image">
     </div>
-    <div class="col-md-12">
-      <div class="hero-content text-center">
+    <div class="col-md-12" style="background-color: rgba(0, 0, 0, 0) !important">
+      <div class="hero-content text-center" style="color: #333">
         <h1>Peatio [&#35988;&#35973;] Open-Source Exchange</h1>
         <h2>Cloud deployment made simple and secure</h2>
         <p>
