--- a/src/assets/css/scss/footer.scss
+++ b/src/assets/css/scss/footer.scss
@@ -21,7 +21,7 @@
 }
 
 .contact h1 {
-  font-family: 'Josefin Sans';
+  font-family: 'Roboto';
   font-size: 21px;
   font-weight: 400;
   color: $primary-color;
@@ -29,7 +29,7 @@
 }
 
 .contact p {
-  font-family: 'Josefin Sans';
+  font-family: 'Roboto';
   font-size: 16px !important;
   font-weight: 400;
   color: #111111;
@@ -38,7 +38,7 @@
 }
 
 .contact a {
-  font-family: 'Josefin Sans';
+  font-family: 'Roboto';
   font-size: 18px;
   font-weight: 400;
   color: $primary-color;
@@ -70,7 +70,7 @@
 }
 
 .footer p {
-  font-family: 'Quicksand';
+  font-family: 'Roboto';
   font-size: 16px;
   font-weight: 600;
   color: #828282;
@@ -79,7 +79,7 @@
 }
 
 .footer-text p {
-  font-family: 'Josefin Sans';
+  font-family: 'Roboto';
   font-size: 14px;
   color: #3333CC;
   font-weight: 400;
