--- a/src/assets/css/scss/media.scss
+++ b/src/assets/css/scss/media.scss
@@ -142,7 +142,7 @@
     p {
       font-size: 15px;
       font-weight: 700;
-      font-family: Quicksand;
+      font-family: 'Roboto';
       color: #828282;
     }
   }
@@ -179,13 +179,13 @@
   }
 
   .space {
-    padding-top: 50px ! important;
+    padding-top: 50px;
   }
 
   .software .features .features-list h1 {
     font-size: 34px;
     margin-top: 0px;
-    font-family: Quicksand;
+    font-family: 'Roboto';
   }
 
   .software .features .features-list {
@@ -208,7 +208,7 @@
 
   .software .feature-sub .sub-inner h1 {
     font-size: 42px;
-    font-family: Quicksand;
+    font-family: 'Roboto';
   }
 
   .split-content {
@@ -229,7 +229,7 @@
   }
 
   .cta-sub .cta-inner h1 {
-    font-family: Quicksand;
+    font-family: 'Roboto';
     font-size: 36px;
   }
 
