--- a/src/assets/css/scss/page.scss
+++ b/src/assets/css/scss/page.scss
@@ -2,7 +2,7 @@
   .hero-content {
     h1 {
       color: #444;
-      font-family: Quicksand;
+      font-family: 'Roboto';
       font-size: 34px;
       font-weight: 600;
       margin: 0 0 50px;
@@ -23,7 +23,7 @@
     border: 1px solid $primary-color;
     border-radius: 50px;
     color: $white;
-    font-family: 'Roboto Black';
+    font-family: 'Roboto';
     font-size: 1em;
     font-weight: bold;
     letter-spacing: 2px;
