--- a/src/assets/css/scss/pricing.scss
+++ b/src/assets/css/scss/pricing.scss
@@ -17,7 +17,7 @@
 
   p {
     color: #444;
-    font-family: 'Poppins';
+    font-family: 'Roboto';
     font-size: 14px;
     font-weight: 400;
     line-height: 1.4;
@@ -63,7 +63,7 @@
 
 .pricing-intro h1 {
   font-size: 34px;
-  font-family: Quicksand;
+  font-family: 'Roboto';
   color: #111111;
   font-weight: 600;
   line-height: 1.4;
@@ -72,7 +72,7 @@
 .pricing-intro p {
   font-size: 15px;
   color: #303030;
-  font-family: Quicksand;
+  font-family: 'Roboto';
   font-weight: 300;
   line-height: 1.4;
   letter-spacing: 1px;
@@ -111,7 +111,7 @@
 .table-left .pricing-details span,
 .table-right .pricing-details span {
   display: inline-block;
-  font-family: Quicksand;
+  font-family: 'Roboto';
   font-size: 28px;
   font-weight: 400;
   color: #808080;
@@ -122,14 +122,14 @@
 .table-right .pricing-details h2 {
   font-size: 18px;
   font-weight: 600;
-  font-family: Quicksand;
+  font-family: 'Roboto';
   color: #505050;
   margin-bottom: 30px;
 }
 
 .table-left .pricing-details p,
 .table-right .pricing-details p {
-  font-family: Quicksand;
+  font-family: 'Roboto';
   font-size: 14px;
   font-weight: 300;
   color: #505050;
