--- a/src/assets/css/scss/demo-request.scss
+++ b/src/assets/css/scss/demo-request.scss
@@ -6,7 +6,7 @@
   .cta-inner {
     h1 {
       font-size: 28px;
-      font-family: Quicksand;
+      font-family: 'Roboto';
       color: $white;
       font-weight: 400;
       line-height: 1.2;
@@ -14,7 +14,7 @@
       margin-bottom: 0;
     }
     p {
-      font-family: Quicksand;
+      font-family: 'Roboto';
       font-size: 14px;
       color: $white;
       font-weight: 300;
@@ -113,14 +113,14 @@
   position: absolute;
   left: 0;
   top: 150%;
-  font-family: 'Poppins';
+  font-family: 'Roboto';
   font-size: 14px;
   color: #ff0000;
 }
 
 #response {
   color: $white;
-  font-family: 'Poppins';
+  font-family: 'Roboto';
   margin-top: 30px;
   font-size: 14px;
   line-height: 1.4;
