--- a/src/assets/css/scss/features.scss
+++ b/src/assets/css/scss/features.scss
@@ -30,7 +30,7 @@
   .features-list {
     p {
       color: #303030;
-      font-family: 'Quicksand';
+      font-family: 'Roboto';
       font-size: 15px;
       font-weight: 500;
       line-height: 1.2;
@@ -46,7 +46,7 @@
     .sub-inner {
       h1 {
         color: $white;
-        font-family: 'Josefin Sans';
+        font-family: 'Roboto';
         font-size: 34px;
         font-weight: 300;
         line-height: 1.1;
@@ -61,7 +61,7 @@
   padding: 100px 0 100px 0;
 
   h1 {
-    font-family: Quicksand;
+    font-family: 'Roboto';
     font-size: 34px;
     font-weight: 600;
     margin: 0 0 10px;
@@ -100,7 +100,7 @@
 
     h1 {
       color: #222;
-      font-family: Quicksand;
+      font-family: 'Roboto';
       font-size: 18px;
       font-weight: 700;
       letter-spacing: 1px;
@@ -109,7 +109,7 @@
 
     p {
       color: #303030;
-      font-family: Quicksand;
+      font-family: 'Roboto';
       font-size: 14px;
       font-weight: 500;
       line-height: 1.4;
