--- a/src/assets/css/scss/helpers.scss
+++ b/src/assets/css/scss/helpers.scss
@@ -1,152 +1,46 @@
-body, .wrapper, .navbar, .container {
-  max-width: 100% !important;
-}
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol, ul {
-  list-style: none;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
 img {
   max-width: 100%;
   height: auto;
 }
 
-/* --- Common Styles ---*/
-
-h1 {
-  font-size: 16px;
+img, i {
+  // disable select
+  -webkit-touch-callout: none; // iOS Safari
+  -webkit-user-select: none;   // Safari
+     -moz-user-select: none;   // Firefox
+      -ms-user-select: none;   // Internet Explorer/Edge
+          user-select: none;   // Non-prefixed version, currently
 }
 
-/*----- Helper Classes -----*/
-
-html * {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+img, i, a {
+  -webkit-user-drag: none;
 }
 
-
-*, *:after, *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-/*
-::-webkit-scrollbar {
-display: none;
-}
- */
 h1, h2, h3, h4, h5, h6 {
-  font-family: Poppins;
+  font-family: 'Roboto Thin', sans-serif;
 }
 
 p {
-  font-family: Roboto;
+  font-family: 'Roboto Thin', sans-serif;
 }
 
-::-moz-selection {
-  color: $white;
-  background: #3333CC;
-}
-
-::selection {
-  color: $white;
-  background: #3333CC;
-}
-
-.nopadding {
-  padding: 0;
-  margin-top: 40px;
-}
-
-.custompadding {
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.no-margin {
-  margin-right: 0;
-  margin-left: 0;
-}
-
-
-.error-message {
-  color: #FF3333;
-  font-family: Poppins;
-  margin-top: 5px;
-}
-
-.success-message {
-  color:#009900;
-  font-family: Poppins;
-  margin-top: 5px;
-}
-
-#loading {
-  width: 100%;
-  height: 100%;
-  top: 0px;
-  left: 0px;
+.bg {
+  background: rgba(#fff, .5);
+  height: 100vh;
   position: fixed;
-  opacity: 1;
-  background-color: #F2F2F2;
-  z-index: 9999;
-  text-align: center;
-}
+  width: 100%;
+  filter: blur(2px);
 
-#loading-image {
-  display: inline;
-  top: 40%;
-  position: relative;
-  z-index: 9999;
-}
+  #particles-js {
+    height: 100vh;
+  }
 
-.logo {
-  margin: 0 auto;
-  padding: 0px 0px;
-  z-index: 111;
-}
-
-.logo:hover, .logo:focus {
-  text-decoration: none;
-  color: $white;
+  .darken {
+    background: rgba(#ddd, .7);
+    height: 100vh;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
 }
