--- a/src/assets/css/scss/services.scss
+++ b/src/assets/css/scss/services.scss
@@ -16,7 +16,7 @@
 
   h1 {
     color: #454545;
-    font-family: Quicksand;
+    font-family: 'Roboto';
     font-size: 34px;
     font-weight: 600;
     letter-spacing: -1px;
@@ -26,7 +26,7 @@
 
   p {
     color: #303030;
-    font-family: 'Quicksand';
+    font-family: 'Roboto';
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 0;
@@ -57,7 +57,7 @@
 
   h1 {
     color: #454545;
-    font-family: Quicksand;
+    font-family: 'Roboto';
     font-size: 22px;
     font-weight: 800;
     letter-spacing: 0;
@@ -67,7 +67,7 @@
 
   p {
     color: #303030;
-    font-family: 'Quicksand';
+    font-family: 'Roboto';
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 0;
