--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,16 +1,19 @@
-@import './scss/variables';
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400');
 
-// TODO: remove reset.css
+@import 'node_modules/bootstrap/scss/bootstrap-reboot';
+@import 'node_modules/bootstrap/scss/bootstrap-grid';
+@import 'node_modules/bootstrap/scss/bootstrap';
+@import '~font-awesome/css/font-awesome.css';
+
+@import './scss/variables';
 @import './scss/helpers';
 @import './scss/media';
 
-@import './scss/navbar';
 @import './scss/footer';
 
 // Page sections
 @import './scss/hero';
 @import './scss/page';
-@import './scss/images';
 @import './scss/carousel';
 @import './scss/services';
 @import './scss/features';
