--- a/src/assets/css/scss/hero.scss
+++ b/src/assets/css/scss/hero.scss
@@ -3,29 +3,12 @@
 }
 
 .hero-content {
-  h1 {
-    color: $text-color;
-    font-size: 36px;
-    font-weight: 400;
-    letter-spacing: -1px;
-    margin: 0 20px;
-    padding-top: 20px;
-  }
+  // h1 { }
 
-  h2 {
-    color: $text-color;
-    font-size: 26px;
-    letter-spacing: -1px;
-    margin: 0 0 20px;
-    padding-top: 0;
-  }
+  // h2 { }
 
   p {
-    color: #a1a1a1;
-    font-family: Poppins;
-    font-size: 14px;
+    color: #555;
     font-weight: 400;
-    line-height: 1.5;
-    margin: 0 0 50px;
   }
 }
