--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400|Codystar');
 
 @import 'node_modules/bootstrap/scss/bootstrap-reboot';
 @import 'node_modules/bootstrap/scss/bootstrap-grid';
